# lockstep_bench

./: .gitattributes  .gitignore  MISSION.md  NOTES.md  README.md  RESOURCES.md  build-environment.lock.json  iter_100_CongestedCLBsAndNets.txt  tight_setup_hold_pins.txt
.codex/: board_targets.tcl
.codex-tasks/: debug_service_request_connect.json  debug_service_response_connect.json  tiny_debug_service_smoke.hex
.tmpCRC/: u_mig_ddr4_phy_phy.xdc
assets/: course.css  quiz.js
docs/: REMOTE_BITSTREAM_BUILD_POLICY.md  解耦.md
docs/开发文档/: 源码库结构规划.md  (+5 more)
learning-records/: 0001-starting-point.md  0002-correct-repository-boundary.md  0003-debug-connection-layered-triage.md  0004-capture-timeout-recovery-and-bitstream-iteration.md
lessons/: 0001-map-repository-boundary.html  (+1 more)
software/lockstep_host/: CMakeLists.txt  CMakePresets.json  README.md
software/lockstep_host/cmake/: CollectLinuxRuntime.cmake  LockstepPackaging.cmake
software/lockstep_host/docs/: FT601_LIBUSB_CROSS_PLATFORM.md  FT601_LIBUSB_WINDOWS.md  README.md  模块开发完成说明.md  第三方依赖与许可证.md  银河麒麟离线安装说明.md  银河麒麟离线构建环境说明.md
software/lockstep_host/examples/: README.md
software/lockstep_host/packaging/delivery/: install.sh  uninstall.sh  verify-install.sh
software/lockstep_host/packaging/kylin-env/: build-requirements.psv
software/lockstep_host/packaging/linux/: 99-lockstep-cmsis-dap.rules  99-lockstep-ft601.rules  lockstep-host  lockstep-host.desktop  postinst  postrm
software/lockstep_host/packaging/windows/: FT601_LIBUSBK_DISTRIBUTION.md  LIBUSBK_DRIVER_PACKAGE.md  LOCKSTEP_WINUSB_DISTRIBUTION.md  build_ft601_libusbk_bundle.ps1  build_lockstep_winusb_bundle.ps1  install_lockstep_all_winusb.ps1  install_lockstep_winusb.ps1  program_zcu102_openocd.ps1  program_zcu102_vivado.ps1  program_zcu102_vivado.tcl  restore_lockstep_usb_driver.ps1  scan_zcu102_vivado.tcl  verify_ft601_libusbk.ps1  verify_lockstep_winusb.ps1  windows_ft601_driver_bootstrap_test.ps1  windows_usb_bootstrap_test.ps1  zadig.ini
software/lockstep_host/packaging/windows/openocd/: lockstep-zcu102-hs2.cfg
software/lockstep_host/profiles/: README.md
software/lockstep_host/profiles/board_profiles/: README.md
software/lockstep_host/profiles/debug_service/: README.md
software/lockstep_host/profiles/openocd/: README.md
software/lockstep_host/resources/: manifest.json
software/lockstep_host/resources/board_profiles/: noelv_zcu102_cmsis_dap.json
software/lockstep_host/resources/debug_adapters/openocd/: cmsis-dap-explicit.cfg  openocd  target-riscv-direct.cfg
software/lockstep_host/resources/debug_adapters/self_debug_service/: interface_cmsis_dap.json  lockstep_debug_service  target_noelv_riscv.json
software/lockstep_host/resources/diagnostics/: diagnostic_rules.json
software/lockstep_host/resources/lockstep_trace/noelv_lockstep_1024/: board_connection.json  channel_map.json  display_profile.json  protocol_decoders.json  trace_profile.json
software/lockstep_host/resources/lockstep_trace/noelv_lockstep_512/: board_connection.json  channel_map.json  display_profile.json  protocol_decoders.json  trace_profile.json
software/lockstep_host/resources/protocol_rules/: placeholder.json
software/lockstep_host/resources/report_templates/: report_template_default.json
software/lockstep_host/resources/windows/ft601_driver/: ensure_ft601_libusbk.ps1  zadig.ini
software/lockstep_host/scripts/: README.md  audit-linux-runtime.sh  bootstrap-kylin-build-env.sh  build-kylin-offline-package.sh  check-kylin-build-env.sh  generate-runtime-dependencies.sh  prepare-kylin-build-env-bundle.sh
software/lockstep_host/src/: CMakeLists.txt  README.md
software/lockstep_host/src/acquisition/: CMakeLists.txt  README.md  sampling_capture.cpp  sampling_capture.h
software/lockstep_host/src/apps/: CMakeLists.txt  debug_service_entry.h  debug_service_main.cpp  debug_service_smoke_main.cpp  ft601_driver_bootstrap.cpp  ft601_driver_bootstrap.h  ui_preview_main.cpp  workbench_controller.cpp  workbench_controller.h  workbench_dialogs.cpp  workbench_dialogs.h
software/lockstep_host/src/error_handling/: CMakeLists.txt  README.md  diagnostic_rules.cpp  diagnostic_rules.h  error_registry.cpp  error_registry.h
software/lockstep_host/src/fault_injection/: CMakeLists.txt  README.md  fault_injection_orchestrator.cpp  fault_injection_orchestrator.h
software/lockstep_host/src/packaging/: CMakeLists.txt  resource_manifest_tool.cpp
software/lockstep_host/src/protocol_analyzer/: CMakeLists.txt  README.md  protocol_analysis.cpp  protocol_analysis.h
software/lockstep_host/src/reporting/: CMakeLists.txt  README.md  report_generator.cpp  report_generator.h
software/lockstep_host/src/resources/: CMakeLists.txt  README.md  resource_manager.cpp  resource_manager.h
software/lockstep_host/src/target_control/: CMakeLists.txt  README.md  target_control.cpp  target_control.h
software/lockstep_host/src/ui_common/: CMakeLists.txt  asset_registry.cpp  asset_registry.h  global_status.cpp  global_status.h  main_window_shell.cpp  main_window_shell.h  splash_widget.cpp  splash_widget.h  top_status_bar.cpp  top_status_bar.h  ui_contract.cpp  ui_contract.h  ui_theme.cpp  ui_theme.h  ui_types.cpp  ui_types.h  workspace_selection_dialog.cpp  workspace_selection_dialog.h
software/lockstep_host/src/waveform_viewer/: CMakeLists.txt  README.md  waveform_trace_viewer.cpp  waveform_trace_viewer.h
software/lockstep_host/src/workflow/: CMakeLists.txt  README.md  workflow_engine.cpp  workflow_engine.h
software/lockstep_host/src/workspace/: CMakeLists.txt  README.md  workspace_manager.cpp  workspace_manager.h
software/lockstep_host/tests/: CMakeLists.txt  README.md  build_env_scripts_test.sh  eight_protocol_benchmark_test.cpp  libusb_runtime_test.cpp  libusb_transport_contract_test.cmake  lockstep_trace_analysis_test.cpp  package_resources_test.cmake  product_python_dependency_test.cmake  report_generator_test.cpp  report_ui_test.cpp  sampling_capture_test.cpp  scalar_1024_vcd_import_test.cpp  target_control_test.cpp  test_temp_directory.h  waveform_ui_test.cpp  workbench_dialogs_test.cpp
(+347 files in other folders)
